--- a/playground/templates/playground/character_list.html
+++ b/playground/templates/playground/character_list.html
@@ -1,18 +1,13 @@
+{% extends 'playground/base.html' %}
 {% load static %}
 
-<html>
-    <head>
-        <title>Le Seigneur des Anneaux</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Le Seigneur des Anneaux</a></h1>
-        </div>
-        {% for character in characters %}
-            <div>
-                <h2><a href="">{{character.id_character}}</a></h2>
-                <img src="{% get_static_prefix %}{{character.photo}}" alt="photo">
+{% block content %}
+    {% for character in characters %}
+        <div class="col-md-3">
+            <h2><a href="" class="character-title">{{character.id_character}}</a></h2>
+            <div class="container-photo">
+                <img src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
             </div>
-        {% endfor %}
-    </body>
-</html>
+        </div>
+    {% endfor %}
+{% endblock %}
