--- a/playground/templates/playground/base.html
+++ b/playground/templates/playground/base.html
@@ -15,7 +15,7 @@
             <h1><a href="/">Le Seigneur des Anneaux</a></h1>
         </div>
         <div class="content container">
-            <div class="row">
+            <div class="row ligne">
                 {% block content %}
                 {% endblock %}
             </div>
