--- a/playground/templates/playground/character_list.html
+++ b/playground/templates/playground/character_list.html
@@ -3,11 +3,9 @@
 
 {% block content %}
     {% for character in characters %}
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-6">
             <h2><a href="" class="character-title">{{character.id_character}}</a></h2>
-            <div class="container-photo">
-                <img src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
-            </div>
+            <img class="container-photo" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
         </div>
     {% endfor %}
 {% endblock %}
