--- a/playground/static/css/style.css
+++ b/playground/static/css/style.css
@@ -27,16 +27,22 @@ div{
 
 .container-photo {
     object-fit: contain;
-    background-color: aliceblue;
-    border: 1px solid lightblue;
+    background-color: rgb(244, 246, 240);
+    border: 1px solid rgb(178, 197, 176);
     border-radius: 10px;
     height: 400px;
     width: 200px;
 }
 
-.ligne {
-    text-align: center;
+.container-photo:hover {
+    border: 1px solid rgb(39, 73, 36);
+    background-color: rgb(159, 188, 156);
 }
+
+
+/* .ligne {
+    text-align: center;
+} */
 
 .character-title {
     color : rgb(39, 73, 36);
