--- a/playground/templates/playground/character_list.html
+++ b/playground/templates/playground/character_list.html
@@ -4,8 +4,8 @@
 {% block content %}
     {% for character in characters %}
         <div class="col-lg-3 col-md-6">
-            <h2><a href="" class="character-title">{{character.id_character}}</a></h2>
-            <img class="container-photo" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
+            <h2><a href="{% url 'character_detail' id_character=character.id_character %}" class="character-title">{{character.id_character}}</a></h2>
+            <a href="{% url 'character_detail' id_character=character.id_character %}"><img class="container-photo" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}></a>
         </div>
     {% endfor %}
 {% endblock %}
