--- a/playground/static/css/style.css
+++ b/playground/static/css/style.css
@@ -40,11 +40,42 @@ div{
 }
 
 
-/* .ligne {
+.ligne {
     text-align: center;
-} */
+}
 
 .character-title {
     color : rgb(39, 73, 36);
     text-decoration: none;
+}
+/* 
+.container {
+    width: 100%;
+} */
+
+.content {
+    justify-content: center;
+}
+
+.btn-form {
+    background-color:rgb(224, 237, 199);
+    color: black;
+    padding: 5px;
+    border-radius: 10px;
+    border : 1px solid rgb(178, 197, 176);
+    margin: 5px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px 0px rgb(178, 197, 176);
+    text-decoration: none;
+}
+
+.btn-form:hover {
+    background-color: rgb(203, 214, 181);
+}
+
+/* .intro-form {
+} */
+
+.post-form {
+    list-style-type: none;
 }
