--- a/playground/static/css/style.css
+++ b/playground/static/css/style.css
@@ -34,6 +34,15 @@ div{
     width: 200px;
 }
 
+.container-photo-lieu {
+    object-fit: contain;
+    background-color: rgb(244, 246, 240);
+    border: 1px solid rgb(178, 197, 176);
+    border-radius: 10px;
+    height: 400px;
+    width: 200px;
+}
+
 .container-photo:hover {
     border: 1px solid rgb(39, 73, 36);
     background-color: rgb(159, 188, 156);
