--- a/playground/static/css/style.css
+++ b/playground/static/css/style.css
@@ -7,6 +7,15 @@ div{
     padding-left: 10px;
 }
 
+p {
+    margin: 0;
+}
+
+h2 {
+    margin-top: 10px;
+    color : rgb(39, 73, 36);
+}
+
 .page-header {
     background-color: rgb(39, 73, 36);
     margin: 0;
@@ -35,7 +44,7 @@ div{
 }
 
 .container-photo-lieu {
-    object-fit: contain;
+    object-fit:cover;
     background-color: rgb(244, 246, 240);
     border: 1px solid rgb(178, 197, 176);
     border-radius: 10px;
@@ -64,6 +73,20 @@ div{
 
 .content {
     justify-content: center;
+}
+
+.character-infos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid rgb(178, 197, 176);
+    border-radius: 10px;
+    background-color: rgb(244, 246, 240);
+    box-shadow: 2px 2px 2px 0px rgb(178, 197, 176);
+
 }
 
 .btn-form {
