--- a/playground/static/css/style.css
+++ b/playground/static/css/style.css
@@ -41,6 +41,7 @@ h2 {
     border-radius: 10px;
     height: 400px;
     width: 200px;
+    box-shadow: 2px 2px 2px 0px rgb(178, 197, 176);
 }
 
 .container-photo-lieu {
@@ -50,6 +51,7 @@ h2 {
     border-radius: 10px;
     height: 400px;
     width: 200px;
+    box-shadow: 2px 2px 2px 0px rgb(178, 197, 176);
 }
 
 .container-photo:hover {
@@ -60,6 +62,7 @@ h2 {
 
 .ligne {
     text-align: center;
+    justify-content: center;
 }
 
 .character-title {
@@ -99,6 +102,7 @@ h2 {
     margin-top: 10px;
     box-shadow: 2px 2px 2px 0px rgb(178, 197, 176);
     text-decoration: none;
+    width: fit-content;
 }
 
 .btn-form:hover {
@@ -110,4 +114,12 @@ h2 {
 
 .post-form {
     list-style-type: none;
+}
+
+.footer {
+    background-color: rgb(39, 73, 36);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
 }
