--- a/playground/templates/playground/character_detail.html
+++ b/playground/templates/playground/character_detail.html
@@ -13,10 +13,10 @@
         </h1>
         <div class="row content">
             <div class="col-lg-2 col-md-6">
-                <img class="container-photo" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
+                <img class="container-photo detail" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
             </div>
             <div class="col-lg-2 col-md-6">
-                <img class="container-photo" src="{% get_static_prefix %}{{equipement.photo}}" alt={{character.equipement.id_equip}}>
+                <img class="container-photo detail" src="{% get_static_prefix %}{{equipement.photo}}" alt={{character.equipement.id_equip}}>
             </div>
             <div class="col-lg-2 col-md-6">
                 <img class="container-photo-lieu" src="{% get_static_prefix %}{{lieu.photo}}" alt={{character.lieu.id_lieu}}>
