--- a/playground/templates/playground/base.html
+++ b/playground/templates/playground/base.html
@@ -21,6 +21,7 @@
             </div>
         </div>
         <div class="footer">
+            Source des descriptions : <a href="https://lotr.fandom.com/fr/wiki/Wiki_Le_Seigneur_des_Anneaux">Wiki Le Seigneur des Anneaux</a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
