--- a/playground/templates/playground/character_detail.html
+++ b/playground/templates/playground/character_detail.html
@@ -12,13 +12,15 @@
             <a class="character-title" href="{% url 'character_detail' id_character=character.id_character %}">{{ character.id_character }}</a>
         </h1>
         <div class="row content">
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2">
                 <img class="container-photo detail" src="{% get_static_prefix %}{{character.photo}}" alt={{character.id_character}}>
             </div>
-            <div class="col-lg-2 col-md-6">
-                <img class="container-photo detail" src="{% get_static_prefix %}{{equipement.photo}}" alt={{character.equipement.id_equip}}>
+            <div class="col-lg-2">
+                <a href="{% url 'equipement_detail' id_equip=character.equipement.id_equip%}">
+                    <img class="container-photo detail" src="{% get_static_prefix %}{{equipement.photo}}" alt={{character.equipement.id_equip}}>
+                </a>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2">
                 <img class="container-photo-lieu" src="{% get_static_prefix %}{{lieu.photo}}" alt={{character.lieu.id_lieu}}>
             </div>
             <div class="row ligne">
