--- a/playground/templates/playground/base.html
+++ b/playground/templates/playground/base.html
@@ -22,7 +22,7 @@
         </div>
         <div class="footer">
             Source des descriptions personnages : <a href="https://lotr.fandom.com/fr/wiki/Wiki_Le_Seigneur_des_Anneaux">Wiki Le Seigneur des Anneaux</a> <br>
-            {% comment %} Source des descriptions équipements : <a href="https://www.pathfinder-fr.org/Wiki/Pathfinder-RPG.Descriptions%20individuelles%20des%20armes.ashx">Wiki Pathfinder RPG</a> {% endcomment %}
+            Source des descriptions équipements : <a href="https://www.pathfinder-fr.org/Wiki/Pathfinder-RPG.Descriptions%20individuelles%20des%20armes.ashx">Wiki Pathfinder RPG</a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
